--- a/index.html
+++ b/index.html
@@ -5,12 +5,189 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Travel More</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Aleo:300,400,700|Josefin+Sans:300,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-search">
+                <div class="header-search__title">
+                    <p>Bhromaon</p>
+                </div>
+                <div class="header-search__text">
+                    <p>Safe Travel Anywhere</p>
+                </div>
+                <form action="#" class="header-search__form">
+                    <input type="search" placeholder="Search Your Travel Destination">
+                    <button type="submit">
+                        <p>Search</p>
+                        <img src="img/search-form-icon.png" alt="">
+                    </button>
+                </form>
+            </div>
+        </div>
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+            <span></span>
+        </label>  
+        <nav class="header-nav">
+                <div class="container">
+                    <div class="header-nav__logo">
+                        <a href="#">Bhromaon</a>
+                    </div>
+                    <div class="header-nav__item">
+                        <a href="#">Who We Are</a>
+                    </div>
+                    <div class="header-nav__item">
+                        <a href="#">What We Do</a>
+                    </div>
+                    <div class="header-nav__item">
+                        <a href="#testimonials">Travel With Us</a>
+                    </div>
+                    <div class="header-nav__item">
+                        <a href="#footer">Contact Us</a>
+                    </div>
+                </div>
+            </nav>
+            <div class="scroll">
+                <a href="#footer">Scroll Down</a>
+                <img src="img/arrow.png" alt="arrow">
+            </div>
+    </header>
+    <main class="main">
+        <section class="choose" id=choose>
+            <div class="container">
+                <div class="choose-content">
+                    <div class="choose-content__title">
+                        Why Choose Us
+                    </div>
+                    <div class="choose-content__text">
+                        Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee 
+                        <span>Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</span>
+                    </div>
+                    <button class="choose-content__btn">
+                        Explore Places 
+                    </button>
+                </div>
+                <div class="choose-img">
+                    <div class="choose-img__top">
+                        <img src="img/choose-img-top.png" alt="">
+                    </div>
+                    <div class="choose-img__bottom">
+                        <img src="img/choose-img-bottom.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="stage" id="stage">
+            <div class="container">
+                <svg class="sv-dots" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid"           width="780" height="96" viewBox="0 0 778 96">
+                        <path d="M0.625,95.500 C0.625,95.500 193.102,-116.958 393.684,95.500 C393.684,95.500 569.952,-118.254 777.625,95.500 " class="icon__sv-dots"/>
+                </svg>
+                <div class="stage-card">
+                    <div class="stage-card__img">
+                        <img src="img/search.png" alt="">
+                    </div>
+                    <div class="stage-card__text">
+                        Search Places
+                    </div>
+                </div>
+                <div class="stage-card">
+                    <div class="stage-card__img">
+                        <img src="img/select.png" alt="">
+                    </div>
+                    <div class="stage-card__text">
+                        Select Places
+                    </div>
+                </div>
+                <div class="stage-card">
+                    <div class="stage-card__img">
+                        <img src="img/book.png" alt="">
+                    </div>
+                    <div class="stage-card__text">
+                        Book & Enjoy
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="place" id="place">
+            <div class="place-first">
+                <div class="container">
+                    <div class="place-description">
+                        <div class="place-description__country">
+                            Spain 
+                        </div>
+                        <div class="place-description__title">
+                            Grand Spain Madrid
+                        </div>
+                        <div class="place-description__text">
+                            But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system
+                        </div>
+                        <button class="place-description__btn">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="place-second">
+                <div class="container">
+                    <div class="place-description">
+                        <div class="place-description__country">
+                            Spain 
+                        </div>
+                        <div class="place-description__title">
+                            Grand Spain Madrid
+                        </div>
+                        <div class="place-description__text">
+                            But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system
+                        </div>
+                        <button class="place-description__btn">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="testimonials" id="testimonials">
+            <div class="container">
+                <p class="testimonials__title">What Our  Tourist Say</p>
+                <div class="testimonials-card">
+                    <img src="img/tourist-img.png" alt="" class="testimonials-card__img">
+                    <div class="testimonials-card-body">
+                        <p class="testimonials-card-body__title">Sam Sumon</p>
+                        <p class="testimonials-card-body__text"><i class="fa fa-quote-left" aria-hidden="true"></i>  But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer" id="footer">
+        <div class="footer-content">
+            <p class="footer-content__title">Bhromaon</p>
+            <p class="footer-content__text">Safe Travel Anywhere</p>
+            <div class="footer-content-social">
+                <a href="#">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                </a>
+                <a href="#">
+                    <i class="fa fa-pinterest" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
