--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <a href="#">Bhromaon</a>
                     </div>
                     <div class="header-nav__item">
-                        <a href="#">Who We Are</a>
+                        <a href="#stage">Who We Are</a>
                     </div>
                     <div class="header-nav__item">
-                        <a href="#">What We Do</a>
+                        <a href="#place">What We Do</a>
                     </div>
                     <div class="header-nav__item">
                         <a href="#testimonials">Travel With Us</a>
@@ -76,10 +76,10 @@
                 </div>
                 <div class="choose-img">
                     <div class="choose-img__top">
-                        <img src="img/choose-img-top.png" alt="">
+                        <img src="img/choose-img-top.png" alt="house">
                     </div>
                     <div class="choose-img__bottom">
-                        <img src="img/choose-img-bottom.png" alt="">
+                        <img src="img/choose-img-bottom.png" alt="nature">
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
             <div class="container">
                 <p class="testimonials__title">What Our  Tourist Say</p>
                 <div class="testimonials-card">
-                    <img src="img/tourist-img.png" alt="" class="testimonials-card__img">
+                    <img src="img/tourist-img.png" alt="tourist" class="testimonials-card__img">
                     <div class="testimonials-card-body">
                         <p class="testimonials-card-body__title">Sam Sumon</p>
                         <p class="testimonials-card-body__text"><i class="fa fa-quote-left" aria-hidden="true"></i>  But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain  But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account  born and I account will give you a complete account of the system was account  born and I account will give you a nai the complete account of the system</p>
